[build-system]
requires = [
	 "oldest-supported-numpy",
	 "setuptools",
	 "wheel",
]

[project]
name = "ocbpy"

license = {file = "LICENSE"}
description = 'Location relative to open/closed field line boundary'
maintainers = [
    {name = "Angeline G. Burrell", email = "angeline.burrell@nrl.navy.mil"},
]
requires-python = ">=3.7"
dependencies = [
    "aacgmv2",
    "numpy",
]
readme = "README.rst"
keywords = [
    "coordinates",
    "field-line boundary",
    "auroral oval",
    "polar cap",
    "pysat",
    "ionosphere",
    "atmosphere",
    "thermosphere",
    "magnetosphere",
    "heliosphere",
    "observations",
    "models",
    "space",
    "satellites",
    "analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
]
dynamic = ['version']

[project.optional-dependencies]
pysat_instruments = [ "pysat" ]
dmsp_ssj = [
    "ssj_auroral_boundaries",
    "zenodo_get",
]
doc = [
    "pysat",
    "sphinx>=1.3",
    "sphinx-rtd-theme",
]

[project.urls]
source = "https://github.com/aburrell/ocbpy"
documentation = "https://ocbpy.readthedocs.io/en/latest/"
tracker = "https://github.com/aburrell/ocbpy/issues"
download = "https://github.com/aburrell/ocbpy/releases"
