[build-system]
requires = ["oldest-supported-numpy", "setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "ocbpy"
version = "0.5.0"
license = {file = "LICENSE"}
description = 'Location relative to open/closed field line boundary'
maintainers = [
    {name = "Angeline G. Burrell", email = "angeline.g.burrell.civ@us.navy.mil"},
]
requires-python = ">=3.10"
dependencies = [
    "aacgmv2",
    "numpy",
]
readme = "README.md"
keywords = [
    "coordinates",
    "field-line boundary",
    "auroral oval",
    "polar cap",
    "pysat",
    "ionosphere",
    "atmosphere",
    "thermosphere",
    "magnetosphere",
    "heliosphere",
    "observations",
    "models",
    "space",
    "satellites",
    "analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
]

[project.optional-dependencies]
pysat_instruments = [ "pysat>=3.2.1" ]
dmsp_ssj = [ "zenodo-get" ]
doc = [
    "numpydoc",
    "pyproject_parser",
    "pysat>=3.2.1",
    "sphinx>=1.3",
    "sphinx-rtd-theme",
]
test = [
     "coverage[toml]",
     "flake8",
     "packaging",
     "requests",
]

[project.urls]
source = "https://github.com/aburrell/ocbpy"
documentation = "https://ocbpy.readthedocs.io/en/latest/"
tracker = "https://github.com/aburrell/ocbpy/issues"
download = "https://github.com/aburrell/ocbpy/releases"

[tool.coverage.run]
relative_files = true
include = ["*/ocbpy/*",
           "*/ocbpy/tests/*"]

[tool.coverage.paths]
ocb_paths = ["ocbpy/",
             "*/lib/*/site-packages/ocbpy"]

[tool.coverage.report]
omit = ["*/lib/*/site-packages/*.py",
        "*/lib/*/site-packages/a*/*",
        "*/lib/*/site-packages/c*/*",
        "*/lib/*/site-packages/d*/*",
        "*/lib/*/site-packages/g*/*",
        "*/lib/*/site-packages/i*/*",
        "*/lib/*/site-packages/m*/*",
        "*/lib/*/site-packages/n*/*",
        "*/lib/*/site-packages/p*/*",
        "*/lib/*/site-packages/r*/*",
        "*/lib/*/site-packages/s*/*",
        "*/lib/*/site-packages/u*/*"]
