[metadata]
name = ocbpy
version = 0.3.0
url = https://github.com/aburrell/ocbpy
author = Angeline G. Burrell, et al.
author_email = angeline.burrell@nrl.navy.mil
description = 'Location relative to open/closed field line boundary'
keywords =
  coordinates
  field-line boundary
  auroral oval
  polar cap
  pysat
  ionosphere
  atmosphere
  thermosphere
  magnetosphere
  heliosphere
  observations
  models
  space
  satellites
  analysis
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires = aacgmv2
		   numpy

[options.extras_require]
pysat_instruments = pysat>=3.0.0
dmsp_ssj = ssj_auroral_boundaries

[flake8]
max-line-length = 80
ignore =
  E275
  W503
  ocbpy/__init__.py F401, E402
  ocbpy/boundaries/__init__.py F401
  ocbpy/instruments/__init__.py F401

[coverage:run]
relative_files = True
include = */ocbpy/*
          */ocbpy/tests/*

[coverage:paths]
ocb_paths = ocbpy/
            */lib/*/site-packages/ocbpy

[coverage:report]
omit = */lib/*/site-packages/*.py
       */lib/*/site-packages/a*/*
       */lib/*/site-packages/c*/*
       */lib/*/site-packages/d*/*
       */lib/*/site-packages/g*/*
       */lib/*/site-packages/i*/*
       */lib/*/site-packages/m*/*
       */lib/*/site-packages/n*/*
       */lib/*/site-packages/p*/*
       */lib/*/site-packages/r*/*
       */lib/*/site-packages/s*/*
       */lib/*/site-packages/u*/*
